@@ -1,3 +1,15 @@
+2012-05-22  Chris Rogers  <crogers@google.com>
+
+        AudioNodeOutput::disconnectAllParams() must take care when iterating through its parameter list
+        https://bugs.webkit.org/show_bug.cgi?id=87190
+
+        Reviewed by Kenneth Russell.
+
+        No new tests. Covered by existing tests.
+
+        * Modules/webaudio/AudioNodeOutput.cpp:
+        (WebCore::AudioNodeOutput::disconnectAllParams):
+
 2012-05-22  MORITA Hajime  <morrita@google.com>
 
         <shadow> and <content> should be hidden behind ContextEnabledFeatures
